--- a/index.html
+++ b/index.html
@@ -3,76 +3,119 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>fmservices.online</title>
+  <title>FM Services- All in One place</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <style>
+    :root {
+      --primary: #005792;
+      --secondary: #0094c6;
+      --bg: #0a192f;
+      --text: #e0e0e0;
+      --accent: #64ffda;
+    }
     body {
       margin: 0;
       font-family: 'Roboto', sans-serif;
-      background: #f4f7fc;
-      color: #333;
+      background: var(--bg);
+      color: var(--text);
     }
     header {
-      background: #005792;
-      color: white;
+      background: var(--bg);
+      color: var(--accent);
       text-align: center;
-      padding: 60px 20px;
+      padding: 100px 20px 60px;
     }
     header h1 {
-      font-size: 2.8rem;
-      margin-bottom: 10px;
+      font-size: 3rem;
+      margin-bottom: 15px;
     }
     header p {
       font-size: 1.2rem;
+      color: var(--text);
     }
-    .search-section {
+    .cta {
+      background: var(--primary);
+      padding: 20px;
       text-align: center;
-      margin-top: 20px;
     }
-    .search-section input {
+    .cta input, .cta button {
       padding: 12px;
+      margin: 10px 5px;
+      border-radius: 6px;
+      border: none;
+      font-size: 1rem;
+    }
+    .cta input {
       width: 60%;
       max-width: 400px;
-      border-radius: 6px;
-      border: 1px solid #ccc;
     }
-    .search-section button {
-      padding: 12px 24px;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      margin-left: 10px;
+    .cta button {
+      background: var(--accent);
+      color: #000;
       cursor: pointer;
     }
-    .categories {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      margin: 40px 20px;
+    .section {
+      padding: 60px 20px;
+      max-width: 1000px;
+      margin: auto;
     }
-    .category-box {
-      background: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-      margin: 10px;
+    .section h2 {
+      color: var(--accent);
+      font-size: 2rem;
+      margin-bottom: 20px;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+    }
+    .card {
+      background: #112240;
       padding: 20px;
-      width: 250px;
-      border-left: 5px solid #005792;
+      border-left: 4px solid var(--accent);
       border-radius: 8px;
     }
-    .category-box h3 {
+    .card h3 {
       margin-top: 0;
+      color: var(--accent);
     }
-    .category-box ul {
-      padding-left: 20px;
+    .form-section {
+      background: #112240;
+      padding: 40px 20px;
+      max-width: 600px;
+      margin: 40px auto;
+      border-radius: 10px;
+    }
+    .form-section h2 {
+      text-align: center;
+      color: var(--accent);
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+    }
+    form input, form textarea, form select {
+      margin-bottom: 15px;
+      padding: 10px;
+      border: none;
+      border-radius: 6px;
+      font-size: 1rem;
+    }
+    form button {
+      background-color: var(--accent);
+      color: #000;
+      padding: 12px;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
     }
     footer {
-      background: #f0f0f0;
+      background: #0c1a2b;
       text-align: center;
       padding: 20px;
       font-size: 0.9rem;
-      color: #666;
+      color: #888;
     }
   </style>
 </head>
@@ -80,39 +123,52 @@
 
   <header class="animate__animated animate__fadeInDown">
     <h1>fmservices.online</h1>
-    <p>A digital hub for FM companies & procurement teams to source third-party and inspection services.</p>
+    <p>The future of sourcing third-party inspection & compliance services for Facility Management teams.</p>
   </header>
 
-  <section class="search-section">
-    <input type="text" placeholder="Search services..." />
+  <section class="cta">
+    <input type="text" placeholder="Search for services...">
     <button>Search</button>
   </section>
 
-  <section class="categories">
-    <div class="category-box">
-      <h3>Inspection</h3>
-      <ul>
-        <li>Elevator Inspection</li>
-        <li>Fire Safety Audit</li>
-        <li>Water Testing</li>
-      </ul>
+  <section class="section">
+    <h2>What We Offer</h2>
+    <div class="grid">
+      <div class="card">
+        <h3>Inspection Services</h3>
+        <p>Elevator checks, fire safety audits, water quality testing — all vetted and ready to deploy.</p>
+      </div>
+      <div class="card">
+        <h3>Testing Solutions</h3>
+        <p>HVAC, electrical and lighting testing streamlined to ensure your systems stay compliant.</p>
+      </div>
+      <div class="card">
+        <h3>Training Programs</h3>
+        <p>Hands-on FM safety and compliance training tailored to your facility’s unique needs.</p>
+      </div>
     </div>
-    <div class="category-box">
-      <h3>Testing</h3>
-      <ul>
-        <li>HVAC System Testing</li>
-        <li>Electrical Testing</li>
-        <li>Emergency Lighting Testing</li>
-      </ul>
-    </div>
-    <div class="category-box">
-      <h3>Training</h3>
-      <ul>
-        <li>Safety Training</li>
-        <li>Compliance Training</li>
-        <li>Equipment Handling Training</li>
-      </ul>
-    </div>
+  </section>
+
+  <section class="form-section">
+    <h2>Request for Quotation (RFQ)</h2>
+    <form action="https://formsubmit.co/vernonserviceswll@email.com" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="email" placeholder="Your Email" required>
+      <input type="text" name="company" placeholder="Company Name" required>
+      <textarea name="services" placeholder="Requested Services (e.g. Elevator + Water Testing)" rows="4" required></textarea>
+      <select name="site_visit">
+        <option value="">Do you need a site visit?</option>
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+      <select name="multiple_proposals">
+        <option value="">Need multiple proposals?</option>
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+      </select>
+      <input type="text" name="timeline" placeholder="Preferred Timeline (e.g. within 7 days)">
+      <button type="submit">Submit RFQ</button>
+    </form>
   </section>
 
   <footer>
