--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
 
   <header class="animate__animated animate__fadeInDown">
-    <h1>fmservices.online</h1>
+    <h1>FM Services- Services Simplified </h1>
     <p>The future of sourcing third-party inspection & compliance services for Facility Management teams.</p>
   </header>
 
